fixed text alignment on tabs

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ div.head {
   color: black;
 }
 
+div.tab {
+	text-align: center;
+}
 
 .button {
   background-color: gold;
